--- a/i3/config
+++ b/i3/config
@@ -12,7 +12,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:Inconsolata NF 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -352,7 +352,7 @@ mode "$mode_display" {
     bindsym Escape mode "default"
 }
 
-bindsym $mod+x mode "$mode_display"
+bindsym $mod+a mode "$mode_display"
 
 
 
@@ -360,7 +360,11 @@ bindsym $mod+x mode "$mode_display"
 # Notifications with Dunst
 #-------------------------------
 
+# launch dunst
 exec --no-startup-id dunst
 
+# dunst keyboard shortcuts
+bindsym $mod+x exec dunstctl close-all
+bindsym Ctrl+BackSpace exec dunstctl history-pop
 
 
