--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,6 +60,10 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# Make a smaller delay so we can perform commands after switching windows
+set -sg escape-time 0
+set -sg repeat-time 600
+
 ##########
 # DESIGN #
 ##########
