--- a/i3/config
+++ b/i3/config
@@ -21,6 +21,8 @@ font pango:Inconsolata NF 12
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
+# Test for VMWare
+exec --no-startup-id vmware-user
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
